crates/analyzer/tests/snapshots/errors__invalid_block_field.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: cannot find value `block` in this scope
  ┌─ compile_errors/invalid_block_field.fe:4:5
  │
4 │     block.foo
  │     ^^^^^ undefined


